tests/Aspire.Hosting.Kubernetes.Tests/Snapshots/KubernetesGatewayTests.AddGateway_WithGrpcRoute_GeneratesGatewayAndGrpcRoute#01.verified.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "GRPCRoute"
metadata:
  name: "public-grpcroute"
spec:
  parentRefs:
    - name: "public"
  rules:
    - matches:
        - method:
            type: "Exact"
            service: "greet.Greeter"
            method: "SayHello"
      backendRefs:
        - name: "greeter-service"
          port: 50051
